--- a/7.1 Combining Selectors/style.css
+++ b/7.1 Combining Selectors/style.css
@@ -2,3 +2,19 @@
 h1, h2{
     color: purple;
 }
+
+div > p {
+    color: firebrick;
+}
+
+ .box li {
+    color: blue;
+ }
+
+ li.done {
+    color:green ;
+ }
+
+  ul > p.done {
+    font-size: 0.5rem;
+  }
